--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,19 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.neon-text {
+  font-size: 2rem;
+  font-weight:500;
+  color: #fff;
+  text-shadow:
+    /* 0 0 5px #00e6e6,
+    0 0 10px #00e6e6, */
+    0 0 20px #00e6e6,
+    0 0 40px #00e6e6,
+    0 0 80px #00e6e6,
+    0 0 90px #00e6e6,
+    0 0 100px #00e6e6,
+    0 0 150px #00e6e6;
 }
